--- a/offers/offers.css
+++ b/offers/offers.css
@@ -51,91 +51,61 @@
 	padding: 10px;
 }
 
-.gen_offers{
-    grid-area: gen_offers;
+.gen_offers, .kids_offers, .students_offers, .adults_offers {
     background-color: rgb(252,143,68);
-    cursor: pointer;
     font-size: 25px;
     width: 70%;
     justify-self: center;
     height: 80px;
+}
+
+.gen_offers h2, .kids_offers h2, .students_offers h2, .adults_offers h2{
+    margin-top: 23px;
+}
+
+.gen_offers{
+    grid-area: gen_offers;
 }
 .kids_offers{
     grid-area: kids_offers;
-    background-color: rgb(252,143,68);
-    cursor: pointer;
-    font-size: 25px;
-    width: 70%;
-    justify-self: center;
-    height: 80px;
 }
 .students_offers{
     grid-area: students_offers;
-    background-color: rgb(252,143,68);
-    cursor: pointer;
-    font-size: 25px;
-    width: 70%;
-    justify-self: center;
-    height: 80px;
 }
 .adults_offers{
     grid-area: adults_offers;
-    background-color: rgb(252,143,68);
-    cursor: pointer;
-    font-size: 25px;
+}
+
+.kids_text, .students_text, .adults_text, .gen_text {
     width: 70%;
     justify-self: center;
-    height: 80px;
+    display: grid;
+    position: relative;
+    background-color: rgba(252,143,68, 0.4);
+    justify-content: center; 
 }
-.summer_offers{
-    display: none;
-    grid-area: summer_offers;
-    background-color: rgb(252,143,68);
-    cursor: pointer;
-    font-size: 25px;
-    width: 70%;
-    justify-self: center;
-    height: 80px;
-}
+
 .gen_text{
     grid-area: gen_text;
-    width: 70%;
-    justify-self: center;
 }
 .kids_text{
     grid-area: kids_text;
-    width: 70%;
-    justify-self: center;
 }
 .students_text{
-    grid-area: students_text;
-    width: 70%;
-    justify-self: center;
+    grid-area: students_text;   
 }
 .adults_text{
     grid-area: adults_text;
-    width: 70%;
-    justify-self: center;
-}
-.summer_text{
-    grid-area: summer_text;
-    width: 70%;
-    justify-self: center;
 }
 
-#gen, #kids, #stud, #adul, #summer{
-    display: none;
-    position: relative;
-    background-color: rgba(252,143,68, 0.4);
-    justify-content: center;
+.adults_text p, .gen_text p, .kids_text p, .students_text p {
+    font-size: 23px;
+    padding: 8px;
 }
 
 
-#gen h1, #stud h1, #adul h1, #summer h1, #kids h1{
-    /* margin: 0 5%; */
-    margin: 10px 10px;
-    font-size: 25px;
-}
+
+
 /* ##################################################################### */
 /* #                            MOBILE                                 # */
 /* ##################################################################### */
