--- a/css/footer.css
+++ b/css/footer.css
@@ -3,8 +3,9 @@ footer {
 	text-align: center;
 	background-color: rgb(0, 0, 0);
 	position: absolute;
-	bottom: 0;
-	height: 130px;
+	/* bottom: 0; */
+	/* margin-bottom: 0; */
+	/* height: 200px; */
 	width: 100%;
 }
 
@@ -16,7 +17,7 @@ footer {
 	/* SOS */
 	/* margin-top: 100%; */
 	width: 100%;
-	height: 200px;
+	/* height: 200px; */
 	background-color: #000;
 	grid-auto-rows: 200px;
 	grid-template-columns: auto;
