--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background-color:white;
     min-height: 100vh;
     position: relative;
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 0px;
 }
@@ -103,6 +103,7 @@ main {
     grid-template-areas:
     ". kids . students . adults .";
     width: 100%;
+    margin: 65px auto;
 }
 
 .front_boxes a{
@@ -290,7 +291,7 @@ main {
     font-size: 25px;
 }
 
-.collage {
+/* .collage {
     display: grid;
     grid-template-columns: 1fr 1000px 1fr;
     grid-template-rows: 10px auto 50px;
@@ -298,34 +299,35 @@ main {
     ". . ."
     ". photos ."
     ". . .";
-}
+} */
 
 .photos {
-    grid-area: photos;
     background-color: white;
-    display: grid;
-    grid-template-columns: 1fr 1500px 1fr;
-    grid-template-rows: 50px auto 100px; 
-    grid-template-areas: 
-    ". . ."
-    ". slideshow_container ."
-    ". . ."    ;
+    margin: 15px 0;
     justify-self: center;
 }
 
 .slideshow_container {
     grid-area: slideshow_container;
     position: block;
-    margin: auto;
+    margin: 10px auto;
+    padding: 25px;
     width: 1000px;
     justify-self: center;
+}
+
+.slideshow_container .shadow {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.37), 0 2px 10px 0 rgba(0, 0, 0, 0.288);
 }
 
 img {
     vertical-align: middle;
     margin: auto;
-    height: 700px;
+    height: 650px;
 }
+
+
+
 /* ##################################################################### */
 /* #                            MOBILE                                 # */
 /* ##################################################################### */
@@ -363,6 +365,7 @@ img {
     .front_boxes{
         justify-self: center;
         /* width: 95%; */
+        margin: 40px auto;
         grid-template-rows: 20px 100px 20px 100px 20px 100px 20px;
         grid-template-columns: 10px auto 10px;
         grid-template-areas:
@@ -429,6 +432,11 @@ img {
 
     img{
         height: 250px;
+    }
+
+    .slideshow_container {
+        width: 95%;
+        padding: 15px 5px;
     }
 
 }
