--- a/css/footer.css
+++ b/css/footer.css
@@ -13,16 +13,17 @@ footer {
 	display: grid;
 	position: relative;
 	justify-self: center;
-	bottom: 0;
+	/* bottom: 0; */
 	/* SOS */
 	/* margin-top: 100%; */
 	width: 100%;
 	/* height: 200px; */
 	background-color: #000;
-	grid-auto-rows: 200px;
+	/* grid-auto-rows: 200px; */
 	grid-template-columns: auto;
 	grid-template-areas:
-	". programms information .";
+	". programms information ."
+	". copy copy .";
 }
 .programms {
 	grid-area: programms;
@@ -69,4 +70,50 @@ footer {
 .em {
 	width: 30px;
 	height: 30px;
+}
+
+
+.copy {
+	grid-area: copy;
+	height: fit-content;
+	margin-top: 10px;
+	padding: 15px;
+}
+
+.copy p {
+	color: #eeeeee;
+	font-size: 15px;
+}
+
+
+
+/* ##################################################################### */
+/* #                            MOBILE                                 # */
+/* ##################################################################### */
+
+@media screen and (max-width: 824px){
+
+	.info{
+		grid-template-columns: 10px auto 10px;
+		grid-template-areas:
+		". information ."
+		". copy .";
+	}
+	.programms{
+			display: none;
+	}
+	.information{
+			text-align: center;
+			font-size: 15px;
+	}
+
+	.loc, .ph, .em{
+		width: 20px;
+		height: 20px;
+	}
+
+	.copy p {
+		font-size: 12px;
+	}
+
 }
