--- a/contact/contact_style.css
+++ b/contact/contact_style.css
@@ -12,7 +12,7 @@
 .content {
     margin: 40px auto;
     width: 90%;
-    height: 400px;
+    height: fit-content;
     background-color: white;   
     height: fit-content; 
     text-align: center;
