--- a/css/footer.css
+++ b/css/footer.css
@@ -27,8 +27,8 @@ footer {
 }
 .programms {
 	grid-area: programms;
-	margin-top: 10px;
-	/* margin-left: 15%; */
+	margin-bottom: auto;
+	margin-top: auto;
 	color: white;
 	font-size: 20px;
 	font-family: Arial, Helvetica, sans-serif;
@@ -44,7 +44,7 @@ footer {
 
 .information {
 	grid-area: information;
-	margin-top: 10px;
+	margin-top: 20px;
 	color: white;
 	font-size: 20px;
 	font-family: Arial, Helvetica, sans-serif;
