--- a/css/nav.css
+++ b/css/nav.css
@@ -7,16 +7,23 @@
 }
 
 .menu {
-    position: sticky;
-    display: grid; 
-    top: 0px;
-    width: 100%;
-    height: 100px;
-    background-color: #1f9fba;
-    grid-auto-rows: auto;
+	position: sticky;
+	/* display: grid;  */
+	top: 0px;
+	width: 100%;
+	height: 100px;
+	background-color: #1f9fba;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-evenly;
+	flex-direction: row;
+	/* align-items: center; */
+	text-align: center;
+	justify-self: center;
+    /* grid-auto-rows: auto;
     grid-template-columns: 1fr 175px 70px 175px 70px 175px 70px 175px 70px 175px 1fr;
     grid-template-areas: 
-    ". home . languages . crew . offers . contact .";
+    ". home . languages . crew . offers . contact ."; */
 }
 
 .menu a h1 {
@@ -31,7 +38,7 @@
 	margin-top: 30px;
 	text-align: center;
 	text-decoration: none;
-    font-size: 30px;
+    font-size: 28px;
 }
 
 .home {
