--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ main {
 
 .letters-middle {
     font-weight: 500;
-    font-size: 75px;
+    font-size: 70px;
     padding: 15px;
     color: white;
 }
@@ -254,7 +254,7 @@ main {
     text-align: center;
     font-size: 28px;
     padding: 20px;
-    width: 600px;
+    width: fit-content;
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
@@ -288,7 +288,7 @@ main {
 .more a {
     color: white;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 /* .collage {
